--- a/src/app/pages/auditor/create/compliance/detail/compliance-detail.component.html
+++ b/src/app/pages/auditor/create/compliance/detail/compliance-detail.component.html
@@ -1,7 +1,3 @@
-<!-- Start Breadcrumbs -->
-<app-breadcrumbs title="Paso 5: Evaluar Cumplimiento" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
-<!-- End Breadcrumbs -->
-
 <!--preloader-->
 <div id="preloader" style="opacity: 0px !important;background-color: #000 !important;visibility: hidden;">
     <div id="status">
@@ -9,158 +5,29 @@
           <span class="visually-hidden">Cargando...</span>
       </div>
     </div>
-  </div>
+</div>
 
 <div class="row">
     <div class="col-12">
 <div class="col-xl-12">
     <div class="card">
-        <div class="card-header">
-            <h6 class="card-title">{{detail.nombre}}</h6>
-            
+        <div class="card-body">
+            <h6 class="card-title">
+                <button class="btn btn-sm px-2 fs-22"
+                            [style.cursor]="'pointer'" (click)="backClicked()">
+                            <i class="ri-arrow-left-s-line"></i>
+                </button>
+                {{detail.nombre}}
+            </h6>
                 <p class="card-subtitle text-muted mb-0">{{detail.descripcion}}</p>
         </div>
-        <div class="card-body">
-            <div class="row">
-                <div class="col-xxl-3 col-lg-3">
-                    <p><b>CUERPO LEGAL:</b></p>
-                    <p><b>{{detail.data ? (detail.data.length > 0 ? detail.data.length : 0) : 0}} {{detail.data ? (detail.data.length == 1 ? 'Cuerpo legal aplicable' : 'Cuerpos Legales aplicables') : 'Cuerpos Legales aplicables'}}</b></p>
-                </div>
-                
-                <div class="col-xxl-3 col-lg-3">
-                    <p><b>ARTICULO:</b></p>
-                    <p><b>{{total_articulos}} {{total_articulos == 1 ? 'Articulo aplicable' : 'Articulos aplicables'}}</b></p>
-                </div>
-
-                <div class="col-xxl-3 col-lg-3">
-                    <p><b>AVANCE:</b></p>
-                    
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" [style]="avance > 0 ? 'width:'+avance+'%;':'width: 1%;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{avance}}%</div>
-                    </div>
-                </div>
-
-                <!--<div class="col-xxl-4 col-lg-4">
-                <div class="row">
-                    <div class="col-xxl-12 col-lg-12">
-                    <h5>CUMPLIMIENTO</h5>
-                    </div>
-                    <div class="col-xxl-4 col-lg-4">
-                        <p><b>Articulos:</b></p>
-                    </div>
-                    <div class="col-xxl-6 col-lg-6">
-                        <p><b>0 No Cumple</b></p>
-                        <div class="progress progress-sm">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <p><b>0 Cumple</b></p>
-                        <div class="progress progress-sm">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <p><b>0 Cumple Parcial</b></p>
-                        
-                        <div class="progress progress-sm">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    
-                </div>
-                </div>-->
-                
-                <!--<div class="col-xxl-3 col-lg-3">
-                    <p><b>ESTADO:</b></p>
-                    <p><span
-                        class="badge badge-soft-danger text-uppercase">Sin evaluar</span></p>
-                </div>-->
-            </div>
-        </div>
-        <div class="card-footer">
-            
-            
-            <div class="row">
-                <div class="col-xxl-12 col-lg-12">
-                <div class="row">
-                    <div class="col-xxl-12 col-lg-12">
-                        <h5>CUMPLIMIENTO</h5>
-                    </div>
-                    <div class="col-xxl-12 col-lg-12">
-                        <p><b>Articulos:</b></p>
-                    </div>
-                    <div class="col-xxl-3 col-lg-3">
-                        <p><b>{{nocumple}} No Cumple</b></p>
-                        <div class="progress progress-sm">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="col-xxl-3 col-lg-3">
-                        <p><b>{{cumple}} Cumple</b></p>
-                        <div class="progress progress-sm">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="col-xxl-3 col-lg-3">
-                        <p><b>{{parcial}} Cumple Parcial</b></p>
-                        
-                        <div class="progress progress-sm">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    
-                </div>
-                </div>
-            </div>
-        </div>
-        <!--<div class="card-footer">
-            <div class="row">
-                <div class="col-xxl-12 col-lg-12">
-                <h5>CUMPLIMIENTO</h5>
-                </div>
-                <div class="col-xxl-1 col-lg-1">
-                    <p><b>Cuerpo Legal:</b></p>
-                </div>
-                <div class="col-xxl-2 col-lg-2">
-                    <p><b>0 No Cumple</b></p>
-                    <div class="progress progress-sm">
-                        <div class="progress-bar bg-danger" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p><b>0 Cumple</b></p>
-                    <div class="progress progress-sm">
-                        <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p><b>0 Parcial</b></p>
-                    
-                    <div class="progress progress-sm">
-                        <div class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-                <div class="col-xxl-1 col-lg-1">
-                    <p><b>Articulo:</b></p>
-                </div>
-                <div class="col-xxl-2 col-lg-2">
-                    <p><b>0 No Cumple</b></p>
-                    <div class="progress progress-sm">
-                        <div class="progress-bar bg-danger" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p><b>0 Cumple</b></p>
-                    <div class="progress progress-sm">
-                        <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p><b>0 Parcial</b></p>
-                    
-                    <div class="progress progress-sm">
-                        <div class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-                
-            </div>
-        </div>-->
     </div>
 </div>
 </div>
 </div>
 
 <div class="row">
-    <div class="col-12">
+<div class="col-12">
 <div class="col-xl-12">
     <div class="card">
         <div class="card-header">
@@ -192,7 +59,7 @@
                 <div class="col-xxl-12 col-lg-12">
                     
                     <div class="row">
-                        <div class="col-xxl-2 col-lg-2" *ngFor="let c of detail.data; let i = index;">
+                        <div class="col-xxl-2 col-lg-2" *ngFor="let c of cuerpos_articulos; let i = index;"><!--detail.data-->
                             <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
                             cursor: pointer;
                             border-radius: 24px;
@@ -253,11 +120,11 @@
                                         <div class="hstack gap-3 fs-15">
                                             <div class="edit" *ngIf="(validateRol(1) || validateRol(2) || validateRol(3)) && (!data.evaluations || !data.evaluations.estado || !data.evaluations.estado == null)">
                                                 <button class="btn btn-sm btn-success edit-item-btn"
-                                                    data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Follow/{{data.id}}"
+                                                    (click)="evaluarClicked(data.id)"
                                                     >Evaluar</button>
                                             </div>
                                             <div class="edit" *ngIf="(!validateRol(3) && !validateRol(5)) || (validateRol(5) && data.evaluations && (data.evaluations.estado == 'CUMPLE' || data.evaluations.estado == 'NO CUMPLE' || data.evaluations.estado == 'CUMPLE PARCIALMENTE'))">
-                                                <button class="btn btn-sm btn-primary edit-item-btn" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Task/{{data.id}}"
+                                                <button class="btn btn-sm btn-primary edit-item-btn"  (click)="tareasClicked(data.id)"
                                                     ><!--Revisar--><i class="ri-eye-line"></i></button>
                                             </div>
                                             <!--<a href="javascript:void(0);" class="link-primary" 
