--- a/src/app/pages/auditor/create/create.component.html
+++ b/src/app/pages/auditor/create/create.component.html
@@ -433,6 +433,14 @@
 <ng-template #TabContent3>
 <ng-container *ngIf="showCompliance && !showComplianceDetail && !showComplianceFollow && !showComplianceTask">
     <app-compliance-auditor [project_id]="project_id" (gestionarFunction) = 'gestionarEvent($event)'></app-compliance-auditor>
+
+    <div class="row">
+        <div class="col-lg-12"> 
+            <div style="float:right;"><!--class="row justify-content-end"-->
+                <button type="button" class="btn btn-success btn-label waves-effect right waves-light" (click)="finalizar()"><i class="ri-checkbox-circle-fill label-icon align-middle fs-16 ms-2"></i> Finalizar</button>
+            </div>
+        </div>
+    </div>
 </ng-container>
 
 <ng-container *ngIf="!showCompliance && showComplianceDetail && !showComplianceFollow && !showComplianceTask">
@@ -440,20 +448,12 @@
 </ng-container>
 
 <ng-container *ngIf="!showCompliance && !showComplianceDetail && showComplianceFollow && !showComplianceTask">
-    <app-auditor-follow [project_id]="project_id" [installation_id]="installation_id" [installation_nombre]="installation_nombre" [cuerpo_id]="articulo_id" (backFunction) = 'backEvent4($event)'></app-auditor-follow>
+    <app-auditor-follow [project_id]="project_id" [installation_id]="compliance_id" [installation_nombre]="compliance_nombre" [cuerpo_id]="articulo_id" (backFunction) = 'backEvent4($event)'></app-auditor-follow>
 </ng-container>
 
 <ng-container *ngIf="!showCompliance && !showComplianceDetail && !showComplianceFollow && showComplianceTask">
-    <app-auditor-task [project_id]="project_id" [installation_id]="installation_id" [installation_nombre]="installation_nombre" [cuerpo_id]="articulo_task_id" (backFunction) = 'backEvent4($event)'></app-auditor-task>
+    <app-auditor-task [project_id]="project_id" [installation_id]="compliance_id" [installation_nombre]="compliance_nombre" [cuerpo_id]="articulo_task_id" (backFunction) = 'backEvent4($event)'></app-auditor-task>
 </ng-container>
-
-<div class="row">
-    <div class="col-lg-12"> 
-        <div style="float:right;"><!--class="row justify-content-end"-->
-            <button type="button" class="btn btn-success btn-label waves-effect right waves-light" (click)="finalizar()"><i class="ri-checkbox-circle-fill label-icon align-middle fs-16 ms-2"></i> Finalizar</button>
-        </div>
-    </div>
-</div>
 
 </ng-template>
 
