--- a/src/app/pages/auditor/create/compliance/compliance.component.html
+++ b/src/app/pages/auditor/create/compliance/compliance.component.html
@@ -88,7 +88,7 @@
                                             <div class="hstack gap-3 fs-15">
                                                 <div class="edit" *ngIf="data.total_articulos > 0">
                                                     <button class="btn btn-sm btn-success edit-item-btn"
-                                                    (click)="gestionar(data.id)"
+                                                    (click)="gestionar(data.id, data.nombre)"
                                                         >Gestionar</button>
                                                 </div>
                                                 <!--<a href="javascript:void(0);" class="link-primary"
