quitar puntos y paginacion

--- a/src/app/pages/plans-work/list/list.component.html
+++ b/src/app/pages/plans-work/list/list.component.html
@@ -58,7 +58,7 @@
                                       <i class="ri-star-fill"></i>
                                   </span>
                               </button>-->
-                              <div class="dropdown" ngbDropdown>
+                              <!--<div class="dropdown" ngbDropdown>
                                   <button class="btn btn-link text-muted p-1 mt-n2 py-0 text-decoration-none fs-15 arrow-none" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="true" ngbDropdownToggle>
                                       <i-feather name="more-horizontal" class="icon-sm"></i-feather>
                                   </button>
@@ -69,7 +69,7 @@
                                       <div class="dropdown-divider"></div>
                                       <a class="dropdown-item" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#removeProjectModal" (click)="confirm(deleteModel,data.id)"><i class="ri-delete-bin-fill align-bottom me-2 text-muted"></i> Quitar</a>
                                   </div>
-                              </div>
+                              </div>-->
                           </div>
                       </div>
                   </div>
