--- a/src/app/pages/auditor/create/compliance/task/task.component.html
+++ b/src/app/pages/auditor/create/compliance/task/task.component.html
@@ -269,7 +269,7 @@
                                                 data-bs-toggle="modal" data-bs-target="#showModal"><i class="ri-eye-line"></i></a>-->
 
                                                 <a href="javascript:void(0);" class="link-primary"
-                                                title="Dar Cumplimiento" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Task/{{cuerpo_id}}/Assess/{{data.id}}/"><i class="ri-shield-user-fill"></i></a>
+                                                title="Dar Cumplimiento" (click)="completarClicked(data.id)"><i class="ri-shield-user-fill"></i></a>
                                                 
                                                 <a href="javascript:void(0);" class="link-danger" 
                                                 title="Eliminar"
