--- a/src/app/pages/auditor/create/compliance/follow/follow.component.html
+++ b/src/app/pages/auditor/create/compliance/follow/follow.component.html
@@ -72,12 +72,19 @@
                         <div class="row g-0">
                             <div class="col-md-12">
                                 <div class="card-body">
-                                    Fecha de Evaluación     
                                     <div class="row">
                                         <div class="col-md-2">
-                                             
+                                            Fecha de Evaluación     
                                             <div class="form-icon right">
                                                 <input class="form-control form-control-icon flatpickr-input" type="text" formControlName="fecha_evaluacion" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
+                                                <i class="ri-calendar-todo-fill"></i>
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="col-md-2">
+                                            Fecha de Termino 
+                                            <div class="form-icon right">
+                                                <input class="form-control form-control-icon flatpickr-input" type="text" formControlName="fecha_termino" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
                                                 <i class="ri-calendar-todo-fill"></i>
                                             </div>
                                         </div>
