--- a/src/app/pages/projects/create/compliance/follow/follow.component.html
+++ b/src/app/pages/projects/create/compliance/follow/follow.component.html
@@ -70,12 +70,20 @@
                         <div class="row g-0">
                             <div class="col-md-12">
                                 <div class="card-body">
-                                    Fecha de Evaluación     
                                     <div class="row">
                                         <div class="col-md-2">
-                                             
+                                     
+                                            Fecha de Evaluación
                                             <div class="form-icon right">
                                                 <input class="form-control form-control-icon flatpickr-input" type="text" formControlName="fecha_evaluacion" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
+                                                <i class="ri-calendar-todo-fill"></i>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2">
+                                            
+                                            Fecha de Termino 
+                                            <div class="form-icon right">
+                                                <input class="form-control form-control-icon flatpickr-input" type="text" formControlName="fecha_termino" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
                                                 <i class="ri-calendar-todo-fill"></i>
                                             </div>
                                         </div>
@@ -102,7 +110,7 @@
                                                     <label class="form-check-label" for="flexSwitchCheckCheckedDisabled" style="width: 150px;">Permiso</label>    
                                             </div>
                                         </div>
-                                        <div class="col-md-3">
+                                        <div class="col-md-2">
                                             <div class="btn-group dropdown" ngbDropdown>
                                                 <button type="button" class="btn btn-primary" style="min-width:100px;" *ngIf="!status">Sin estado</button>
                                                 <button type="button" class="btn btn-success" style="min-width:100px;" *ngIf="status == 'CUMPLE'">Cumple</button>
