--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -73,12 +73,25 @@
         <div class="col-xxl-4 col-lg-6">
             <div class="card card-body" style="min-height: 250px;">
                 <div class="avatar-sm mb-3">
+                    <div class="avatar-title bg-soft-success text-success fs-17 rounded">
+                        <i class="ri-add-line"></i>
+                    </div>
+                </div>
+                <h4 class="card-title">Identificación/Vinculación</h4>
+                <p class="card-text text-muted">Completa los campos requeridos y obtendrás un reporte gráfico y ejecutivo de las obligaciones legales aplicables a tu proyecto y vinculalos a tus instalaciones para gestionar su cumplimiento.</p>
+                <a href="javascript:void(0);" class="btn btn-success"  (click)="saveProject(1)">Iniciar</a>
+            </div>
+        </div>
+        
+        <div class="col-xxl-4 col-lg-6">
+            <div class="card card-body" style="min-height: 250px;">
+                <div class="avatar-sm mb-3">
                     <div class="avatar-title fs-17 rounded" style="background-color: #767676;">
                         <i class="ri-add-line"></i>
                     </div>
                 </div>
-                <h4 class="card-title">Identifica las obligaciones legales y permisos de tu proyecto</h4>
-                <p class="card-text text-muted">Completa los campos requeridos y obtendrás un reporte gráfico y ejecutivo de las obligaciones legales aplicables a tu proyecto.</p>
+                <h4 class="card-title">Evalua las obligaciones legales de tu proyecto</h4>
+                <p class="card-text text-muted">Evalua las obligaciones legales aplicables de tu proyecto y gestiona hallazgos segun instalaciones.</p>
                 <a href="javascript:void(0);" class="btn btn-success" style="
                 background: #767676;
                 border-color: #767676;
@@ -86,16 +99,21 @@
             ">Iniciar</a>
             </div>
         </div>
+        
         <div class="col-xxl-4 col-lg-6">
             <div class="card card-body" style="min-height: 250px;">
                 <div class="avatar-sm mb-3">
-                    <div class="avatar-title bg-soft-success text-success fs-17 rounded">
+                    <div class="avatar-title fs-17 rounded" style="background-color: #767676;">
                         <i class="ri-add-line"></i>
                     </div>
                 </div>
-                <h4 class="card-title">Vincula tus intalaciones a obligaciones legales</h4>
-                <p class="card-text text-muted">Revisa cuales son los articulos legales que te aplican y vinculalos a tus obligaciones para gestionar su cumplimiento.</p>
-                <a href="javascript:void(0);" class="btn btn-success"  (click)="saveProject(1)">Iniciar</a>
+                <h4 class="card-title">Seguimiento y Control de los hallazgos de tu proyecto</h4>
+                <p class="card-text text-muted">Gestiona el cumplimiento de los hallazgos encontrados en tu proyecto.</p>
+                <a href="javascript:void(0);" class="btn btn-success" style="
+                background: #767676;
+                border-color: #767676;
+                cursor: no-drop;
+            ">Iniciar</a>
             </div>
         </div>
     </div>
