--- a/src/app/pages/plans-work/create/task/task.component.html
+++ b/src/app/pages/plans-work/create/task/task.component.html
@@ -76,6 +76,11 @@
                                         <img [src]="data.findings.img" (error)="imgError($event)" alt="user img"
                                         class="users-avatar-shadow avatar mr-3 rounded-circle" height="64" width="64">
                                     </div>
+                                    
+                                    <div class="col-md-2">
+                                        <h5>Identificador:</h5>
+                                        <p>{{data.findings ? data.findings.id.toString().padStart(6,"H-000") : '' }}</p>
+                                    </div>
                                     <div class="col-md-2">
                                         <h5>Fecha Creación:</h5>
                                         <p>{{data.findings.createdAt | date: 'd/M/yy' }}</p>
@@ -86,7 +91,7 @@
                                         <p>{{data.findings.nombre}}</p>
                                     </div>
                                     
-                                    <div class="col-md-7">
+                                    <div class="col-md-5">
                                         <h5>Descripción:</h5> 
                                         <p>{{data.findings.descripcion}}</p>
                                     </div>
@@ -329,7 +334,7 @@
                 <label for="hallazgo-field" class="form-label">Hallazgo</label>
                 <select class="form-select mb-3" aria-label="Hallazgo" formControlName="evaluationFindingId" placeholder="Seleccione Hallazgo">
                     <option selected>Seleccione Hallazgo </option>
-                    <option *ngFor="let h of hallazgos;" value="{{h.id}}">{{h.findings.nombre}}</option>
+                    <option *ngFor="let h of hallazgos;" value="{{h.id}}">{{'('+h.findings.id.toString().padStart(6,"H-000")+')'+h.findings.nombre}}</option>
                 </select>
             <div class="invalid-feedback">Por favor ingresar hallazgo.</div>
             </div>
