--- a/src/app/pages/projects/create/compliance/task/task.component.html
+++ b/src/app/pages/projects/create/compliance/task/task.component.html
@@ -112,10 +112,15 @@
                         <div class="row" id="lj_{{data.id}}">
                             <div class="col-lg-12" style="margin-bottom: 20px;">
                                 <div class="row">
+                                    
                                     <div class="col-md-1">
                                         <img [src]="data.findings.hallazgoImg
                                         " (error)="imgError($event)" alt="Hallazgo respaldo"
                                         class="users-avatar-shadow avatar mr-3" height="64" width="64"><!--rounded-circle-->
+                                    </div>
+                                    <div class="col-md-2">
+                                        <h5>Identificador:</h5>
+                                        <p>{{data.findings ? data.findings.id.toString().padStart(6,"H-000") : '' }}</p>
                                     </div>
                                     <div class="col-md-2">
                                         <h5>Fecha Creación:</h5>
@@ -127,7 +132,7 @@
                                         <p>{{data.findings.nombre}}</p>
                                     </div>
                                     
-                                    <div class="col-md-7">
+                                    <div class="col-md-5">
                                         <h5>Descripción:</h5> 
                                         <p>{{data.findings.descripcion}}</p>
                                     </div>
@@ -388,7 +393,7 @@
                 <label for="hallazgo-field" class="form-label">Hallazgo</label>
                 <select class="form-select mb-3" aria-label="Hallazgo" formControlName="evaluationFindingId" placeholder="Seleccione Hallazgo">
                     <option selected>Seleccione Hallazgo </option>
-                    <option *ngFor="let h of hallazgos;" value="{{h.findings.id}}">{{h.findings.nombre}}</option>
+                    <option *ngFor="let h of hallazgos;" value="{{h.findings.id}}">{{'('+h.findings.id.toString().padStart(6,"H-000")+')'+h.findings.nombre}}</option>
                 </select>
                 <!--<ngx-simplebar style="height: 80px;">
                     <ul class="list-unstyled vstack gap-2 mb-0">
