--- a/src/app/pages/plans-work/plans-work-anality/plans-work-anality.component.html
+++ b/src/app/pages/plans-work/plans-work-anality/plans-work-anality.component.html
@@ -97,7 +97,7 @@
                                     <td>{{ data.fecha_inicio | date: 'd/M/yy' }}
                                     </td>
                                     <td>{{ data.fecha_termino | date: 'd/M/yy' }}</td>
-                                    
+                                    <td>{{getRetraso(data.fecha_termino)}}</td>
                                     <td class="status"><span
                                         class="badge badge-soft-{{data.estado && data.estado == 'COMPLETADA' ? 'success' : (data.estado && data.estado == 'INICIADA' ? 'warning' : 'danger')}} text-uppercase">{{data.estado ? (data.estado == 'COMPLETADA' ? 'Completada' : (data.estado == 'INICIADA' ? 'Iniciada' : 'Creada')) : 'Creada'}}</span>
                                     </td>
